Bug 134015 - Right-click menu on usernames in chat window does not work
Summary: Right-click menu on usernames in chat window does not work
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Chat Window (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-13 15:54 UTC by Tobias Rausch
Modified: 2007-12-28 14:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Rausch 2006-09-13 15:54:17 UTC
Version:           0.12.1 (using KDE 3.5.2, Kubuntu Package 4:3.5.2-0ubuntu18.1 dapper)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.15-26-386

right-clicking on a username in chat window should open the contact menu
but if you rename the contact to a user-defined name the contact menu says that the user has left the chat
changing the name again to the default name makes the menu working fine
Comment 1 Roman Jarosz 2007-12-28 14:52:16 UTC
SVN commit 753782 by rjarosz:

Fix bug 134015: Right-click menu on usernames in chat window does not work
Check also metaContact's display name.

BUG: 134015



 M  +11 -3     chatmessagepart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=753782