Fix bug 134015: Right-click menu on usernames in chat window does not work Check also metaContact's display name.

BUG: 134015


svn path=/trunk/KDE/kdenetwork/kopete/; revision=753782